<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/black">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark"
        tools:context=".government_detail_info">

        <TextView
            android:id="@+id/locationtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/chicago_usa" />

        <TextView
            android:id="@+id/officenametxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/locationtxt"
            app:layout_constraintStart_toStartOf="@+id/locationtxt"
            app:layout_constraintTop_toBottomOf="@+id/locationtxt"
            tools:text="U.S Senator" />

        <TextView
            android:id="@+id/personNametxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/officenametxt"
            app:layout_constraintStart_toStartOf="@+id/officenametxt"
            app:layout_constraintTop_toBottomOf="@+id/officenametxt"
            tools:text="Tammy Duckworth" />

        <TextView
            android:id="@+id/partytxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/personNametxt"
            app:layout_constraintStart_toStartOf="@+id/personNametxt"
            app:layout_constraintTop_toBottomOf="@+id/personNametxt"
            tools:text="(Democratic Party)" />

        <ImageView
            android:id="@+id/personimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/personimage"
            android:onClick="zoomImage"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="@+id/partytxt"
            app:layout_constraintStart_toStartOf="@+id/partytxt"
            app:layout_constraintTop_toBottomOf="@+id/partytxt"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/partysymbolimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/partylogo"
            android:onClick="clickLogo"
            app:layout_constraintBottom_toBottomOf="@+id/personimage"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.24936387" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <TextView
            android:id="@+id/addtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/address"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/personimage"
            tools:text="Address:" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="377dp" />

        <TextView
            android:id="@+id/photxt"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="@+id/addtxt"
            app:layout_constraintTop_toBottomOf="@+id/addresstxtview" />

        <TextView
            android:id="@+id/phonetxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/photxt"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            tools:text="(202) 225-5006" />


        <TextView
            android:id="@+id/emaxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="@+id/addtxt"
            app:layout_constraintTop_toBottomOf="@+id/photxt" />

        <TextView
            android:id="@+id/emailtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/emaxt"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            tools:text="sampleemil@mail.com" />

        <TextView
            android:id="@+id/webtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/website"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            app:layout_constraintStart_toStartOf="@+id/addtxt"
            app:layout_constraintTop_toBottomOf="@+id/emaxt" />

        <TextView
            android:id="@+id/weburltxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/webtxt"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            tools:text="https://www.sample.government.com/" />

        <ImageView
            android:id="@+id/googleimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/googleimage"
            android:onClick="googlePlusClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webtxt"
            app:srcCompat="@drawable/googleplus" />

        <ImageView
            android:id="@+id/fbimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/facebookimage"
            android:onClick="facebookClicked"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toEndOf="@+id/googleimage"
            app:layout_constraintTop_toBottomOf="@+id/webtxt"
            app:srcCompat="@drawable/facebook" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/twitterimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/twitterimage"
            android:onClick="twitterClicked"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/webtxt"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/youtubeimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/youtubeimage"
            android:onClick="youTubeClicked"
            app:layout_constraintEnd_toEndOf="@+id/weburltxt"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/twitterimage"
            app:layout_constraintTop_toBottomOf="@+id/webtxt"
            app:srcCompat="@drawable/youtube" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.69" />

        <TextView
            android:id="@+id/addresstxtview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:onClick="clickMap"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/personimage"
            tools:text="United States Senate,524 Hart Senate Office Building,Washington,DC 20510" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>